# invest

./: .gitignore  README.md  analysis.py  compare_strategies.py  diagnose_momentum.py  download_data.py  invest.py  invest_gui.py  invest_simulator.py  pyproject.toml  read_data.py  read_sp500.py  run.sh  utils.py  uv_project_env.sh
data/: inflation_processed.pkl  interest.csv  interest_processed.pkl  portfolio.csv  sp500_processed.pkl
data/STOCK/: BRKB.csv  COKE.csv
invest/: __init__.py  _paths.py  analysis.py  analysis_gui.py  backtest.py  backtest_gui.py  compare_gui.py  compare_gui_deprecated.py  download_data.py  invest.py  invest_gui.py  invest_simulator.py  portfolio_manager.py  read_data.py  strategies.py  utils.py
invest/data/: inflation.csv  inflation_processed.pkl  interest.csv  interest_processed.pkl  portfolio.csv  portfolios.json
research/: beta_debug.py  beta_reinvest_debug.py
