[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invest"
version = "0.1.0"
description = "Investment simulator and GUI tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pyqt5>=5.15; sys_platform != 'win32'",
    "pyqt5==5.15.10; sys_platform == 'win32'",
    "pyqt5-qt5==5.15.2; sys_platform == 'win32'",
    "pyqtgraph>=0.13",
    "tqdm>=4.67.1",
    "yfinance>=0.2",
]

[project.gui-scripts]
invest-gui = "invest:main"
invest-agui = "invest.analysis_gui:main"
invest-backtest = "invest.backtest_gui:main"
invest-ana = "invest:analysis"
invest-download = "invest:download_data"

[tool.setuptools]
packages = ["invest"]
include-package-data = true

[tool.setuptools.package-data]
invest = [
    "data/**/*",
]

[tool.uv]
package = true
